--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         }
 
         //启用地图范围限定
-        lockMapBounds();
+        // lockMapBounds();
         // logMapInfo();
 
         // 这是一个表示矩形区域四个角的经纬度坐标数组
