--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         }
 
         //启用地图范围限定
-        // lockMapBounds();
+        lockMapBounds();
         // logMapInfo();
 
         // 这是一个表示矩形区域四个角的经纬度坐标数组
@@ -369,7 +369,7 @@
             [106.514439, 29.611859],
             [106.502126, 29.610702]
         ]
-        map.setMask([path2]); // 设置 mask 路径
+        // map.setMask([path2]); // 设置 mask 路径
 
 
         //推荐路线
