--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             [106.514439, 29.611859],
             [106.502126, 29.610702]
         ]
-        // map.setMask([path2]); // 设置 mask 路径
+        map.setMask([path2]); // 设置 mask 路径
 
 
         //推荐路线
