--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
         map.setMask([path2]); // 设置 mask 路径
 
          // 限制地图显示范围
-        function lockMapBounds() {
-            // var bounds = new AMap.Bounds(
-            //     [116.325367, 39.935626],
-            //     [116.345236, 39.950745]
-            // );
-            var bounds = new AMap.Bounds(
-                [106.496429, 29.607582],
-                [106.515555, 29.622646]
-            );
-            map.setLimitBounds(bounds);
-            // logMapInfo();
-        }
+        // function lockMapBounds() {
+        //     // var bounds = new AMap.Bounds(
+        //     //     [116.325367, 39.935626],
+        //     //     [116.345236, 39.950745]
+        //     // );
+        //     var bounds = new AMap.Bounds(
+        //         [106.496429, 29.607582],
+        //         [106.515555, 29.622646]
+        //     );
+        //     map.setLimitBounds(bounds);
+        //     // logMapInfo();
+        // }
 
-        //启用地图范围限定
-        lockMapBounds();
+        // //启用地图范围限定
+        // lockMapBounds();
        
        
 
