--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 // 创建 AMap.Icon 实例
                 const icon = new AMap.Icon({
                     size: new AMap.Size(20, 20), // 设置图标的尺寸
-                    image: '/images/navIcon.png', // 图标的URL
+                    image: './images/navIcon.png', // 图标的URL
                     imageSize: new AMap.Size(20, 20) // 根据所设置的大小拉伸或压缩图片
                 });
 
